# wafle-scraper

./: .gitignore  LICENSE  README.md  n8n-workflow-scraping.json  pyproject.toml
.github/workflows/: publish.yml
src/waflescraper/: __init__.py  captcha_handler.py  security.py  server.py  stealth.py
src/waflescraper/backends/: browser_backend.py  http_backend.py  reddit_backend.py
tests/: debug_reddit.py  test_basic.py
